<resources>
    <string name="app_name">Data Storing App</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title">Student Data Form Submission</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="course">Course Name</string>
    <string name="button1">Submit</string>
</resources>
