<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#592171"
    tools:context="com.example.hpnotebookpc.datastoringapp.MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <EditText
        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/number"
        android:inputType="phone"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <EditText
        android:id="@+id/courseName"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:hint="@string/course"
        android:inputType="text"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="#E5EBE4" />

    <Button
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/button1"
        android:textSize="18sp"
        android:background="#FFCC00"
        android:onClick="submitInfo"
        android:layout_marginLeft="16dp" />

</LinearLayout>